--- a/src/components/ColorCard/ColorCard.css
+++ b/src/components/ColorCard/ColorCard.css
@@ -3,12 +3,15 @@
   display: block;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .color-container {
   width: 250px;
   height: 250px;
   display: flex;
+  flex-direction: column;
+  gap: 15px;
   justify-content: center;
   align-items: center;
 }
@@ -17,4 +20,15 @@
   background-color: white;
   padding: 10px;
   border-radius: 5px;
+}
+
+.delete-button {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  line-height: 0%;
+  border-style: none;
 }
